force-app/main/default/objects/sc_ext__General_Configuration__mdt/sc_ext__General_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>General Configuration</label>
    <pluralLabel>General Configurations</pluralLabel>
</CustomObject>