force-app/main/default/objects/sc_ext__General_Configuration__mdt/fields/sc_ext__Key__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Key__c</fullName>
    <description>The key to identify this general configuration</description>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>