force-app/main/default/objects/sc_ext__General_Configuration__mdt/fields/sc_ext__Value__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Value__c</fullName>
    <description>The value of this general configuration</description>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>