force-app/main/default/objects/sc_ext__General_Configuration__mdt/fields/sc_ext__Value_Upgradeable__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Value_Upgradeable__c</fullName>
    <description>The upgradeable value of this general configuration</description>
    <label>Value Upgradeable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>